Possible fixed property picture alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,6 @@
     padding-top: 1.5rem;
 }
 
-#property-image{
-    padding-right: 24.5rem;
-}
 
 #logo{
     padding-left: 5rem;
